syntax = "proto3";

import "google/protobuf/any.proto";
import "sp/DacPlayer.proto";

package com.spotify.home.dac.component.v1.proto;

option java_multiple_files = true;
option java_package = "com.spotify.home.dac.component.v1.proto";

message ShortcutsSectionComponent {
  string title = 1;
  repeated google.protobuf.Any shortcuts = 2;
}

message AlbumCardShortcutComponent {
  string title = 1;
  string navigate_uri = 2;
  string image_uri = 3;
  com.spotify.dac.player.v1.proto.PlayCommand play_command = 4;
}

message PlaylistCardShortcutComponent {
  string title = 1;
  string navigate_uri = 2;
  string image_uri = 3;
  com.spotify.dac.player.v1.proto.PlayCommand play_command = 4;
}

message ShowCardShortcutComponent {
  string title = 1;
  string navigate_uri = 2;
  string image_uri = 3;
  com.spotify.dac.player.v1.proto.PlayCommand play_command = 4;
}

message ArtistCardShortcutComponent {
  string title = 1;
  string navigate_uri = 2;
  string image_uri = 3;
  com.spotify.dac.player.v1.proto.PlayCommand play_command = 4;
}

message EpisodeCardShortcutComponent {
  string title = 1;
  string navigate_uri = 2;
  string image_uri = 3;
  bool fresh = 4;
  int64 progress_percentage = 5;
  com.spotify.dac.player.v1.proto.PlayCommand play_command = 6;
}
